--- a/printf/Makefile
+++ b/printf/Makefile
@@ -5,23 +5,23 @@
 #                                                     +:+ +:+         +:+      #
 #    By: JuHyeon <ljh3900@gmail.com>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/11/19 13:46:04 by JuHyeon           #+#    #+#              #
-#    Updated: 2024/11/19 13:59:58 by JuHyeon          ###   ########.fr        #
+#    Created: 2024/11/15 11:20:32 by JuHyeon           #+#    #+#              #
+#    Updated: 2024/11/19 22:37:19 by JuHyeon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME=libftprintf.a
+NAME = libftprintf.a
 
 SRCS = \
-	   ft_printf.c \
-	   ft_strchr.c \
-	   ft_form_check.c \
-	   ft_strlen.c \
-	   ft_itoa_base.c \
-	   ft_itoa.c \
-	   ft_putchar_rt.c \
-	   ft_putstr_rt.c \
-	   ft_strlen.c
+	ft_printf.c \
+	ft_putchar_rt.c \
+	ft_putstr_rt.c \
+	ft_strchr.c \
+	ft_strlen.c \
+	ft_itoa.c \
+	ft_itoa_base.c \
+	ft_form_check.c \
+	ft_putpointer.c
 
 OBJ = $(SRCS:.c=.o)
 
@@ -32,15 +32,17 @@ AR = ar -rcs
 all: $(NAME)
 
 $(NAME): $(OBJ)
-		$(AR) $(NAME) $(OBJ)
+	$(AR) $(NAME) $(OBJ)
 
 %.o: %.c
-		$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-		rm -f $(OBJ) $(BOBJ)
+	rm -f $(OBJ)
 
 fclean: clean
-		rm -f $(NAME)
+	rm -f $(NAME)
 
 re: fclean all
+
+.PHONY: all clean fclean re
