--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,92 +3,58 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: JuHyeon <ljh3900@gmail.com>                +#+  +:+       +#+         #
+#    By: juhyeonl <juhyeonl@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/07 23:06:49 by JuHyeon           #+#    #+#              #
-#    Updated: 2024/11/11 18:47:33 by juhyeonl         ###   ########.fr        #
+#    Updated: 2024/12/17 15:26:10 by juhyeonl         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME=libft.a
-
-SRCS = \
-	ft_atoi.c \
-	ft_bzero.c \
-	ft_calloc.c \
-	ft_isalnum.c \
-	ft_isalpha.c \
-	ft_isascii.c \
-	ft_isdigit.c \
-	ft_isprint.c \
-	ft_itoa.c \
-	ft_memchr.c \
-	ft_memcmp.c \
-	ft_memcpy.c \
-	ft_memmove.c \
-	ft_memset.c \
-	ft_putchar_fd.c \
-	ft_putendl_fd.c \
-	ft_putnbr_fd.c \
-	ft_putstr_fd.c \
-	ft_split.c \
-	ft_strchr.c\
-	ft_strdup.c \
-	ft_striteri.c \
-	ft_strjoin.c \
-	ft_strlcat.c \
-	ft_strlcpy.c \
-	ft_strlen.c \
-	ft_strmapi.c \
-	ft_strncmp.c \
-	ft_strtrim.c \
-	ft_substr.c \
-	ft_tolower.c \
-	ft_toupper.c \
-	ft_strnstr.c \
-	ft_strrchr.c
-BSRCS = \
-	ft_lstnew_bonus.c \
-	ft_lstsize_bonus.c \
-	ft_lstclear_bonus.c \
-	ft_lstmap_bonus.c \
-	ft_lstiter_bonus.c \
-	ft_lstadd_front_bonus.c \
-	ft_lstadd_back_bonus.c \
-	ft_lstdelone_bonus.c \
-	ft_lstlast_bonus.c
-
-OBJ = $(SRCS:.c=.o)
-BOBJ = $(BSRCS:.c=.o)
+NAME = libft.a
 
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
-AR = ar -rcs
+
+SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
+    ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
+    ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
+    ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c \
+    ft_atoi.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c \
+    ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c \
+    ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+
+BONUS_SRCS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c \
+	     ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c \
+	     ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
+
+OBJS = $(SRCS:.c=.o)
+BONUS_OBJS = $(BONUS_SRCS:.c=.o)
+RM = rm -f
+AR = ar rcs
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
-	$(AR) $(NAME) $(OBJ)
+$(NAME): $(OBJS)
+	@$(AR) $(NAME) $(OBJS)
+	@echo "$(NAME) created"
+	@ranlib $(NAME)
+	@echo "$(NAME) indexed"
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
+bonus: $(BONUS_OBJS)
+	@$(AR) $(NAME) $(BONUS_OBJS)
+	@ranlib $(NAME)
+
 clean:
-	rm -f $(OBJ) $(BOBJ)
+	@$(RM) $(OBJS) $(BONUS_OBJS)
+	@echo "OBJS deleted"
 
 fclean: clean
-	rm -f $(NAME)
+	@$(RM) $(NAME)
+	@echo "$(NAME) deleted"
 
 re: fclean all
-
-bonus: .bonus
-
-.bonus: $(OBJ) $(BOBJ)
-	$(AR) $(NAME) $(OBJ) $(BOBJ)
-	@touch .bonus
-
-so:
-	$(CC) -nostartfiles -fPIC $(CFLAGS) $(SRCS)
-	$(CC) -nostartfiles -shared -o libft.so $(OBJ)
 
 .PHONY: all clean fclean re bonus
