TODO in the main.c

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: juhyeonl <juhyeonl@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/12/07 20:04:17 by juhyeonl          #+#    #+#              #
-#    Updated: 2024/12/19 15:36:14 by juhyeonl         ###   ########.fr        #
+#    Updated: 2025/01/08 13:35:17 by juhyeonl         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,6 +15,7 @@ NAME = push_swap
 SRCS = \
 		main.c \
 		stack_util.c \
+		push_swap_utils.c \
 		utils.c
 
 OBJ = $(SRCS:.c=.o)
