--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,18 +6,18 @@
 #    By: juhyeonl <juhyeonl@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/12/07 20:04:17 by juhyeonl          #+#    #+#              #
-#    Updated: 2025/01/08 13:35:17 by juhyeonl         ###   ########.fr        #
+#    Updated: 2025/01/10 07:50:35 by JuHyeon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = push_swap
 
 SRCS = \
+		check_digit_utils.c \
+		input_parse.c \
 		main.c \
-		stack_util.c \
-		push_swap_utils.c \
+		stack_utils.c \
 		utils.c
-
 OBJ = $(SRCS:.c=.o)
 
 CC = cc
