--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: juhyeonl <juhyeonl@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/12/07 20:04:17 by juhyeonl          #+#    #+#              #
-#    Updated: 2025/01/10 07:50:35 by JuHyeon          ###   ########.fr        #
+#    Updated: 2025/01/10 14:43:37 by juhyeonl         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,8 +14,10 @@ NAME = push_swap
 
 SRCS = \
 		check_digit_utils.c \
+		command_utils.c \
 		input_parse.c \
 		main.c \
+		push_swap_command.c \
 		stack_utils.c \
 		utils.c
 OBJ = $(SRCS:.c=.o)
