--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,33 +6,34 @@
 #    By: juhyeonl <juhyeonl@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/01 09:58:28 by juhyeonl          #+#    #+#              #
-#    Updated: 2025/02/01 09:58:52 by juhyeonl         ###   ########.fr        #
+#    Updated: 2025/02/15 16:53:36 by juhyeonl         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = so_long
-
-SRCS = \
-		
-OBJ = $(SRCS:.c=.o)
-
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -Imlx -I. -Iget_next_line
+MLX_FLAGS = -Lmlx -lmlx -lXext -lX11
+
+# get_next_line 관련 파일 포함
+GNL_SRCS = get_next_line/get_next_line.c get_next_line/get_next_line_utils.c
+GNL_OBJS = $(GNL_SRCS:.c=.o)
+
+SRCS = main.c map_reader.c map_validator.c render.c events.c utils.c $(GNL_SRCS)
+OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJ)
+$(NAME): $(OBJS)
+	$(CC) $(CFLAGS) -o $(NAME) $(OBJS) $(MLX_FLAGS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJ)
+	rm -f $(OBJS)
 
 fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
-
-.PHONY: all clean fclean re
