--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -3,23 +3,32 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: juhyeonl <juhyeonl@student.42.fr>          +#+  +:+       +#+         #
+#    By: JuHyeon <juhyeonl@student.hive.fi>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/01 09:58:28 by juhyeonl          #+#    #+#              #
-#    Updated: 2025/02/15 16:53:36 by juhyeonl         ###   ########.fr        #
+#    Updated: 2025/02/23 20:41:38 by JuHyeon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = so_long
 CC = cc
 CFLAGS = -Wall -Wextra -Werror -Imlx -I. -Iget_next_line
-MLX_FLAGS = -Lmlx -lmlx -lXext -lX11
+MLX_FLAGS = -L./mlx -lmlx -lXext -lX11
 
 # get_next_line 관련 파일 포함
-GNL_SRCS = get_next_line/get_next_line.c get_next_line/get_next_line_utils.c
+GNL_SRCS = \
+			get_next_line/get_next_line.c \
+			get_next_line/get_next_line_utils.c
 GNL_OBJS = $(GNL_SRCS:.c=.o)
 
-SRCS = main.c map_reader.c map_validator.c render.c events.c utils.c $(GNL_SRCS)
+SRCS = \
+		main.c \
+		map_reader.c \
+		map_validator.c \
+		render.c \
+		events.c \
+		utils.c \
+		$(GNL_SRCS)
 OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
